fix tags z-index on the wall

--- a/app/assets/stylesheets/blocks/b-news_wall-topic.sass
+++ b/app/assets/stylesheets/blocks/b-news_wall-topic.sass
@@ -22,7 +22,7 @@
       .status-tags
         position: absolute
         top: 0
-        z-index: 1
+        z-index: 2
 
       a
         height: auto
@@ -41,7 +41,7 @@
         justify-content: flex-start
         margin-top: 0
         position: absolute
-        z-index: 1
+        z-index: 2
 
     header
       order: 98
